--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,8 +1,8 @@
 <idea-plugin>
-    <id>me.and.co.my.awesome.framework</id>
-    <name>My Awesome Framework</name>
+    <id>fi.aalto.cs.replace</id>
+    <name>REPL-ace</name>
     <version>0.0.1-SNAPSHOT</version>
-    <vendor>Me and Co</vendor>
+    <vendor>LeTech Group at Aalto University</vendor>
 
     <description>A new plugin for IntelliJ platform written in Scala and built with SBT</description>
 
@@ -10,6 +10,7 @@
 
     <depends>com.intellij.modules.platform</depends>
     <depends>com.intellij.properties</depends>
+    <depends>org.intellij.scala</depends>
 
     <resource-bundle>messages.SamplePluginBundle</resource-bundle>
 
@@ -17,6 +18,15 @@
         <action id="org.jetbrains.scala.samples.actions.PopupDialogAction"
                 class="org.jetbrains.scala.samples.actions.PopupDialogAction">
             <add-to-group group-id="ToolsMenu" anchor="first"/>
+        </action>
+        <action id="Scala.RunConsole"
+                class="fi.aalto.cs.replace.intellij.actions.ReplAction"
+                overrides="true">
+            <keyboard-shortcut first-keystroke="control shift D" keymap="$default"/>
+        </action>
+        <action id="ScalaConsole.Execute"
+                class="org.jetbrains.plugins.scala.console.replace.ConsoleExecuteAction"
+                overrides="true">
         </action>
     </actions>
 
