Explain repl commands

--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -17,6 +17,7 @@ ui.repl.warning.ignoreAlways=Never ask again
 ### Scala
 ui.repl.console.name=REPL for {0}
 ui.repl.console.scala.repl=Scala REPL
+ui,repl.console.scala.repl.replacePrompt=
 ui.repl.console.scala.repl.extended=Enhanced Scala REPL
 ui.repl.console.welcome.shortcutMissing=SHORTCUT MISSING
 ui.repl.console.welcome.autoImport.single.message=Auto-imported package [{0}] for your convenience.
