--- a/resources/messages/resources.properties
+++ b/resources/messages/resources.properties
@@ -1,23 +1,16 @@
 # UI
 ## REPL
-### Java
-ui.repl.configuration.form.chooseWorkingDirectory=Choose Working Directory
-ui.repl.configuration.form.infoLabel=<html><body>This dialog sets up the Scala REPL so that the appropriate course modules are automatically available when you use the REPL. Just leave these settings unchanged and click OK below, unless you have a definite reason to do otherwise.</body></html>
-ui.repl.configuration.form.informativeText=Informative text
-ui.repl.configuration.form.workingDirectory=Working directory:
-ui.repl.configuration.form.moduleClasspathSDK=Use classpath and SDK of module:
-ui.repl.configuration.form.doNotShowAgain=Don't show this window again
-ui.repl.configuration.form.title=REPL Configuration
-ui.repl.configuration.form.OK=OK
-ui.repl.configuration.form.cancel=Cancel
 ### Warning banner
 ui.repl.warning.description=You need to restart the REPL for the code changes to be applied.
 ui.repl.warning.ignoreOnce=Ignore for this session
 ui.repl.warning.ignoreAlways=Never ask again
+### Notifications
+ui.repl.notification.notFound.title=Module not found
+ui.repl.notification.notFound.message=REPLace could not detect the module.
 ### Scala
 ui.repl.console.name=REPL for {0}
 ui.repl.console.scala.repl=Scala REPL
-ui,repl.console.scala.repl.replacePrompt=
+ui.repl.console.scala.repl.replacePrompt=
 ui.repl.console.scala.repl.extended=Enhanced Scala REPL
 ui.repl.console.welcome.shortcutMissing=SHORTCUT MISSING
 ui.repl.console.welcome.autoImport.single.message=Auto-imported package [{0}] for your convenience.
