--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
     <id>fi.aalto.cs.replace</id>
     <name>REPLace</name>
-    <version>1.0.0-beta2</version>
+    <version>1.0.0</version>
     <vendor>LeTech</vendor>
 
     <description>
