--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -12,6 +12,7 @@
     <idea-version since-build="242"/>
 
     <depends>com.intellij.modules.platform</depends>
+    <depends>com.intellij.modules.java</depends>
     <depends>com.intellij.properties</depends>
     <depends>org.intellij.scala</depends>
 
